# onza-fdtd

./: .gitignore  .hgignore  CMakeLists.txt  README  README.md  go.sh  push-to-github.sh
data/: default-onza.config  explore1D.config  explore2D.config  pfdtd2D-blitz.cpp  self-test-3D-simple.config  self-test-TMz2D-speedup.config  test-parallel-3D.config  test3Dsimple.config  testTMz2Dspeedup.config  testX1Dzero.config
data/gnuplot/: gnuplot-all.sh  onza.plt
doc/CodingStyle/: CodeStyleConventions-idTech.doc
doc/CodingStyle/google-styleguide-read-only/.svn/: all-wcprops  entries
doc/CodingStyle/google-styleguide-read-only/cpplint/: #cpplint_unittest.py#  cpplint_unittest.py
doc/CodingStyle/google-styleguide-read-only/cpplint/.svn/: all-wcprops  entries
scripts/: count-loc.sh  do-lint.sh  doxygen-rsync-to-phoif.sh  pull.sh  push.sh  rsync-to-deb00.sh  rsync-to-phoif.sh  run-on-deb00.sh  run-on-phoif.sh
scripts/build-additional-soft/: build-gcc.sh  build-on-deb00.sh  build-on-phoif.sh
scripts/test-core/: rsync-to-phoif.sh  run-all-tests.sh  start-remote.sh
scripts/test-core/2D/C++/: 2D_test_blitz.cc  2D_test_std.cc  gnuplot-all-blocks_test.sh  time-blitz.plt  time-stdc.plt
scripts/test-core/2D/C,C++/: compile-and-run-2D-C,C++-tests.sh
scripts/test-core/2D/C,C++/blitz/: 2D_test_blitz.cc  2D_test_range.cc  2D_test_range_blocks.cc  2D_test_stencil.cc  2D_test_stencil_blocks.cc
scripts/test-core/2D/C,C++/c/: 2D_test_c.c  2D_test_std_0032_409600.c  2D_test_std_0064_102400.c  2D_test_std_0128_25600.c  2D_test_std_0256_6400.c  2D_test_std_0512_1600.c  2D_test_std_1024_400.c  2D_test_std_2048_100.c
scripts/test-core/2D/C,C++/valgrind/: 2D_test_blitz.cc  2D_test_c.c  2D_test_range.cc  2D_test_std_0032_40960.c  2D_test_std_0064_10240.c  2D_test_std_0128_2560.c  2D_test_std_0256_640.c  2D_test_std_0512_160.c  2D_test_std_1024_40.c  2D_test_std_2048_10.c  2D_test_stencil.cc
scripts/test-core/2D/Fortran/: compile-and-run-2D-Fortran-tests.sh
scripts/test-core/2D/Fortran/Fortran/: 2D_fortran.f95  2D_test_fortran_0032_409600.f95  2D_test_fortran_0064_102400.f95  2D_test_fortran_0128_25600.f95  2D_test_fortran_0256_6400.f95  2D_test_fortran_0512_1600.f95  2D_test_fortran_1024_400.f95  2D_test_fortran_2048_100.f95
scripts/test-core/2D/Fortran/fast_version/: 2D_test_fortran_0032.f95  2D_test_fortran_0064.f95  2D_test_fortran_0128.f95  2D_test_fortran_0256.f95  2D_test_fortran_0512.f95  2D_test_fortran_1024.f95  2D_test_fortran_2048.f95
scripts/test-core/2D/Fortran/valgrind/: 2D_test_fortran_0032_40960.f95  2D_test_fortran_0064_10240.f95  2D_test_fortran_0128_2560.f95  2D_test_fortran_0256_640.f95  2D_test_fortran_0512_160.f95  2D_test_fortran_1024_40.f95  2D_test_fortran_2048_10.f95  valgrind.sh
scripts/test-core/3D/C++/: 3D_test_blitz.cc  3D_test_std.cc  compile-and-run.sh  gnuplot-all-blocks_test.sh
scripts/test-core/3D/C,C++/: compile-and-run-3D-C,C++-tests.sh
scripts/test-core/3D/C,C++/blitz/: 3D_test_blitz.cc  3D_test_range.cc  3D_test_stencil.cc
scripts/test-core/3D/C,C++/c/: 3D_test_c.c  3D_test_std-register.c  3D_test_std_0032_6400.c  3D_test_std_0064_800.c  3D_test_std_0128_100.c  fdtd-3D-sse.c
scripts/test-core/3D/C,C++/valgrind/: 3D_test_blitz.cc  3D_test_c.c  3D_test_range.cc  3D_test_range_blocks.cc  3D_test_std_0032_640.c  3D_test_std_0064_80.c  3D_test_std_0128_10.c  3D_test_stencil.cc  3D_test_stencil_blocks.cc
scripts/test-core/3D/Fortran/: compile-and-run-3D-Fortran-tests.sh
scripts/test-core/3D/Fortran/Fortran/: 3D_fortran.f95  3D_test_fortran_0032_6400.f95  3D_test_fortran_0064_800.f95  3D_test_fortran_0128_100.f95
scripts/test-core/3D/Fortran/fast_version/: 3D_test_fortran_0032.f95  3D_test_fortran_0064.f95  3D_test_fortran_0128.f95  compile-and-run-tests.sh
scripts/test-core/3D/Fortran/valgrind/: 3D_test_fortran_0032_640.f95  3D_test_fortran_0064_80.f95  3D_test_fortran_0128_10.f95
scripts/test-core/Report/: Report.tex
scripts/test-core/Report/Final_Data/AMD_Phenom_ll_X4_965/2D/: 2D_test_performance.txt  do-2D-all.sh  do-blocks.sh  do-single-task.sh  results_size_1024x1024.plot
scripts/test-core/Report/Final_Data/AMD_Phenom_ll_X4_965/3D/: 3D.ods  3D_test_performance.txt  do-3D-all.sh
scripts/test-core/Report/Final_Data/i5/2D/: 2D_i5.ods  2D_test_performance.txt  do-2D-all.sh  do-blocks.sh  do-single-task.sh  results_size_1024x1024.plot
scripts/test-core/Report/Final_Data/i5/3D/: 3D.ods  3D_test_performance.txt  do-3D-all.sh
scripts/test-core/meep/: 2D_test_c_meep.c  3D_test_c_meep.c  compile-and-run-stdC-vs-meep.sh  task2D.cc  task3D.cc
scripts/test-parallel/: !Readme.txt  README.txt  efficiency.plt  exec_script.py  gnu_efficiency.sh  gnu_mean.sh  gnuplot-all-test-parallel.sh  mean-time-fixed-mpirun-parameters.plt  mean-time.plt  rsy.sh  start-local.sh  start-remote.sh  start_local.sh  start_remote.sh  test-parallel.py
src/: CMakeLists.txt  common.h  onza-fdtd.cc
src/mpi-decomposition/: CMakeLists.txt  halo-exchange-process.cc  halo-exchange-process.h
src/profiling/: timer.cc  timer.h
src/simulation-core/: basic-fdtd.cc  basic-fdtd.h
